examples/resolver/checker/pass/type_aliases.axo
const integeralias: Integer = 99
const floatalias: Float = 12.5
const booleanalias: Boolean = false
print(integeralias)
print(floatalias)
print(booleanalias)
