examples/resolver/checker/fail/type_annotation_mismatch.axo
const broken: Integer = "hello"
print(broken)
